--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
 name: async_state
 description: Provides a simple method of doing async initialisation for a StatefulWidget
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/onepub-dev/async_state
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
 
 # Add regular dependencies here.
 dependencies:
-   flutter:
+  flutter:
     sdk: flutter
-   future_builder_ex: ^4.0.0
+  future_builder_ex: ^5.0.0
 
 dev_dependencies:
   lint_hard: ^5.0.0
